--- a/css/style.css
+++ b/css/style.css
@@ -505,6 +505,10 @@ select option:hover {
     height: 510px;
 }
 
+.dialog__invisible {
+  display: none;
+}
+
 .dialog__title {
     position: relative;
 }
